@@ -8,15 +8,7 @@ INCLUDES = 						\
 lastexitlibdir = $(pkglibdir)
 lastexitlib_LTLIBRARIES = liblastexit.la
 
-DBUS_GENERATED_H = lastexit-dbus-glue.h
-
-lastexit-dbus-glue.h: lastexit.xml
-	dbus-binding-tool --mode=glib-server --output=lastexit-dbus-glue.h --prefix=lastexit lastexit.xml
-
 liblastexit_la_SOURCES = 				\
-	$(DBUS_GENERATED_H)				\
-	lastexit-dbus.c					\
-	lastexit-dbus.h					\
 	player.c					\
 	player.h					\
 	sexy-icon-entry.c				\
@@ -26,7 +18,3 @@ liblastexit_la_SOURCES = 				\
 
 liblastexit_la_LIBADD = $(LASTEXIT_LIBS)
 liblastexit_la_LDFLAGS = -avoid-version 
-
-BUILT_SOURCES = $(DBUS_GENERATED_H)
-CLEANFILES = $(DBUS_GENERATED_H)
-EXTRA_DIST = lastexit.xml
